<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutUsActivity" >

    <ImageView
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/title" />

    <TextView
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:id="@+id/company_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:text="@string/company_about_us" />

    <TextView
        android:id="@+id/website_text"
        android:paddingBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_text"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/website_about_us" />

    <TextView
        android:id="@+id/email_text"
        android:paddingBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:layout_below="@id/website_text"
        android:text="@string/email_about_us" />
    
    <TextView
        android:id="@+id/twitter_text"
        android:paddingBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text"
        android:text="@string/twitter_about_us" />

</RelativeLayout>